Add game logic and style

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+  margin: 0;
+}
+table {
+  border-collapse: collapse;
+  margin: 20px;
+}
+table,
+th,
+td {
+  border: 1px solid;
+}
+td {
+  width: 100px;
+  height: 100px;
   text-align: center;
+  vertical-align: middle;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.boardFrame {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.texts {
+  font-family: serif;
+  font-weight: bolder;
+  font-size: 40px;
 }
